--- a/config.env
+++ b/config.env
@@ -6,4 +6,4 @@ SYNC_MODE=double
 # 可选值: true, false
 # 自动同步默认开启 (true)，防止大镜像导致磁盘空间不足。
 # 如果同步的镜像较小且希望节省时间，可设置为 false。
-CLEAN_DISK_SPACE=false
+CLEAN_DISK_SPACE=true
